--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,7 @@
 html, body {
   min-width: 100%;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
